# shaderscope

./: CMakeLists.txt  LICENSE  README.md  build.bat  clean-both.bat  clean.bat  compile-shaders.bat
cmake/: superbuild.cmake
shader/boids/: boids_cs_indirect.sc  boids_cs_init.sc  boids_cs_update.sc  boids_fs.sc  boids_vs.sc  common.sh  shaderlib.sh  uniforms.sh  varying.def.sc
src/bims/: CMakeLists.txt
src/bims/include/: bims.h
src/bims/include/bims/: imgui_impl_bgfx.h  imgui_impl_sdl.h  shader-utils.h
src/bims/src/: bims.cpp  imgui_impl_bgfx.cpp  imgui_impl_sdl.cpp  shader-utils.cpp
src/shaderscope/: CMakeLists.txt  main.cpp
